# deep-research

./: .env.example  LICENSE  README.md  main.py  pyproject.toml
src/agents/: __init__.py  coder.py  planner.py  reporter.py  researcher.py  supervisor.py
src/app/: app.py
src/crawler/: article.py  jina_client.py
src/models/: models.py
src/prompts/: __init__.py  coder.md  load_prompt.py  planner.md  reporter.md  researcher.md  supervisor.md
src/server/: app.py
src/tests/: __init__.py  test_agent.py
src/tools/: __init__.py  python_repl.py  web_crawl.py  web_search.py
